# rydis

./: Cargo.toml  README.md
examples/: basic.rs
src/: enums.rs  lib.rs  main.rs
