[package]
name = "rydis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.5"
bitflags = "2.4.1"
num_enum = "0.7.1"
thiserror-no-std = "2.0.2"
zydis-sys = { path = "../zydis-sys" }
