[package]
name = "rydis"
version = "0.1.1"
edition = "2021"
authors = ["Roee Shoshani"]
description = "low level rust bindings for the zydis library"
repository = "https://github.com/roeeshoshani/zydis-sys"
license = "MIT"
keywords = ["zydis", "x86", "disassemble", "assemble", "intel"]
categories = ["embedded", "encoding", "no-std", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
bitfield-struct = "0.5.5"
bitflags = "2.4.1"
num_enum = "0.7.1"
thiserror-no-std = "2.0.2"
zydis-sys = "0.1.0"

[features]
std = ["thiserror-no-std/std", "arrayvec/std"]
